# approximint

./: Cargo.toml  README.md
.github/workflows/: rust.yml
.rustme/: config.ron  docs.md  header.md
main/: crates.js  help.html  search-index.js  settings.html  src-files.js
main/approximint/: all.html  index.html  sidebar-items.js  struct.Approximint.html  struct.DecimalFormatter.html  struct.ScientificFormatter.html  struct.WordFormatter.html  trait.Approximate.html
main/search.desc/approximint/: approximint-desc-0-.js
main/src/approximint/: lib.rs.html
main/trait.impl/approximint/: trait.Approximate.js
main/trait.impl/core/clone/: trait.Clone.js
main/trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
main/trait.impl/core/convert/: trait.From.js
main/trait.impl/core/default/: trait.Default.js
main/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
main/trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
main/trait.impl/core/ops/arith/: trait.Add.js  trait.AddAssign.js  trait.Mul.js  trait.Neg.js  trait.Sub.js  trait.SubAssign.js
main/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: .crate-docs.md  lib.rs  tests.rs
